# library-template

./: CHANGELOG.md  template-config.toml
.github/: template-chooser.yml
dev/: cargo.toml
templates/apache/: Cargo.toml  LICENSE  README.md
templates/proprietary/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
